タグの取得の実装(wip)
